# solanum

./: Cargo.toml
.github/workflows/: rust.yml
src/: .ui.rs.rustfmt  args.rs  ascii.rs  config.rs  error.rs  event.rs  figlet.rs  main.rs  notification.rs  path.rs  session.rs  timer.rs  ui.rs
