[package]
name = "solanum"
description = "Yet another CLI pomodoro timer."
authors = ["Marco Radocchia <marco.radocchia@outlook.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.18", features = ["derive"] }
crossterm = "0.25.0"
tui = "0.19.0"

[profile.release]
opt-level = 3 # optimize for speed (max level)
lto = true    # link-time-optimization
strip = true  # strip symbols from binary
