[package]
name = "solanum"
description = "Yet another CLI pomodoro timer."
authors = ["Marco Radocchia <marco.radocchia@outlook.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.147", features = ["derive"] }
clap = { version = "4.0.26", features = ["derive"] }
tui = "0.19.0"
crossterm = "0.25.0"
toml = "0.5.9"
dirs = "4.0.0"

[profile.release]
opt-level = 3     # optimize for speed (max level)
lto = true        # link-time-optimization
strip = true      # strip symbols from binary
codegen-units = 1 # longer compile times, but provides optimizations
panic = "abort"   # abort on panic (no unwinding => smaller binary size)
